# project2_demyanova

./: .gitignor  .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
